[package]
name = "nico-editor"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nico-types = { path = "../types" }

log = "0.4"
console_log = "0.1"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2"
yew = { version = "0.13", features = ["web_sys"] }

wee_alloc = { version = "0.4.4" }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]

