[package]
name = "nico-types"
version = "0.1.0"
authors = ["Anton <antonoutkine@gmail.com>", "Noah <33094578+coolreader18@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.23", default-features = false, features = ["png"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Document", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "ImageData"]
